[gd_scene load_steps=2 format=3 uid="uid://ctest1234main"]

[ext_resource type="Script" path="res://scenes/main.gd" id="1_script"]

[node name="Main" type="Node2D"]
script = ExtResource("1_script")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="CanvasLayer/UI/VBoxContainer"]
layout_mode = 2
text = "Godot MCP Integration Test"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/UI/VBoxContainer"]
layout_mode = 2

[node name="ScreenshotButton" type="Button" parent="CanvasLayer/UI/VBoxContainer"]
layout_mode = 2
text = "Capture Screenshot"

[node name="StateButton" type="Button" parent="CanvasLayer/UI/VBoxContainer"]
layout_mode = 2
text = "Export Scene State"

[node name="SpawnButton" type="Button" parent="CanvasLayer/UI/VBoxContainer"]
layout_mode = 2
text = "Spawn Test Node"

[node name="HSeparator2" type="HSeparator" parent="CanvasLayer/UI/VBoxContainer"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="CanvasLayer/UI/VBoxContainer"]
layout_mode = 2
text = "Status: Ready"
horizontal_alignment = 1

[node name="TestSprites" type="Node2D" parent="."]

[node name="Sprite1" type="Sprite2D" parent="TestSprites"]
position = Vector2(200, 300)

[node name="Sprite2" type="Sprite2D" parent="TestSprites"]
position = Vector2(400, 300)

[node name="Sprite3" type="Sprite2D" parent="TestSprites"]
position = Vector2(600, 300)
